--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -1,10 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;300;400;500;600;700&family=Roboto:wght@300;400;500;700;900&display=swap");
 
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  height: 100vh;
 }
 img {
   display: block;
@@ -13,10 +12,14 @@ img {
 button {
   border: none;
 }
-h1 {
+h1,
+h2,
+p,
+span {
   padding: 0;
   margin: 0;
 }
+
 input {
   border: none;
   outline: none;
