adicionando trtamento de erro,arrumando footer, adicionando skeleton

--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-y: scroll;
 }
 img {
   display: block;
@@ -26,4 +27,7 @@ input {
 }
 #root {
   height: 100%;
+}
+.active {
+  position: relative !important;
 }
